--- a/homework.html
+++ b/homework.html
@@ -226,7 +226,7 @@
     let updateInterval = parseInt(document.getElementById("intervalSelector").value);
 
     function playAlertSound() {
-      const audio = new Audio("https://www.soundjay.com/buttons/sounds/beep-07.mp3");
+      const audio = new Audio("https://actions.google.com/sounds/v1/alarms/beep_short.ogg");
       audio.play();
     }
 
