--- a/homework.html
+++ b/homework.html
@@ -226,9 +226,14 @@
     let updateInterval = parseInt(document.getElementById("intervalSelector").value);
 
     function playAlertSound() {
-      const audio = new Audio("https://actions.google.com/sounds/v1/alarms/beep_short.ogg");
-      audio.play();
-    }
+      const audio = new Audio("https://actions.google.com/sounds/v1/alarms/alarm_clock.ogg");
+      audio.play().then(() => {
+    alert(`⚠️ CPU 사용률 ${cpu}% (임계치 ${threshold}%) 초과!`);
+  }).catch((err) => {
+    console.warn("사운드 재생 실패:", err);
+    alert(`⚠️ CPU 사용률 ${cpu}% (임계치 ${threshold}%) 초과!`);
+  });
+}
 
     async function updateChart() {
       try {
