--- a/homework.html
+++ b/homework.html
@@ -1,286 +1,164 @@
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>시스템 모니터링 대시보드</title>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels"></script>
-  <style>
-    body {
-      background-color: #f2f2f2;
-      font-family: 'Pretendard', sans-serif;
-      color: #333;
-      text-align: center;
-      padding: 20px;
-    }
+<script>
+  const ctx = document.getElementById('systemChart').getContext('2d');
+  const pieCtx = document.getElementById('pieChart').getContext('2d');
+  let chartType = 'line';
+  let updateInterval = 30000;
+  let intervalHandle = null;
 
-    h1 {
-      margin-top: 30px;
-      color: #222;
-    }
+  const alertAudio = new Audio("https://actions.google.com/sounds/v1/alarms/alarm_clock.ogg");
+  alertAudio.volume = 1.0;
 
-    .container {
-      display: flex;
-      justify-content: center;
-      gap: 30px;
-      margin: 40px auto;
-    }
-
-    .box {
-      border: 3px solid #444;
-      padding: 20px;
-      width: 180px;
-      height: 100px;
-      background-color: #fff;
-      box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-    }
-
-    .box h2 {
-      font-size: 22px;
-      margin-bottom: 10px;
-      color: #000;
-    }
-
-    .box p {
-      font-size: 18px;
-    }
-
-    .chart-container {
-      max-width: 841px;
-      margin: 0 auto 40px auto;
-      padding: 20px;
-      border: 3px solid #444;
-      background-color: #fff;
-    }
-
-    .line-charts {
-      display: flex;
-      justify-content: center;
-      gap: 30px;
-      margin-bottom: 40px;
-    }
-
-    .line-box {
-      border: 3px solid #444;
-      background-color: #fff;
-      padding: 10px;
-      width: 250px;
-      height: 220px;
-    }
-
-    .line-box h3 {
-      font-size: 18px;
-      margin-bottom: 5px;
-    }
-
-    .line-box canvas {
-      width: 100% !important;
-      height: 160px !important;
-    }
-
-    #recordList {
-      max-width: 841px;
-      margin: 0 auto 40px auto;
-      background-color: #fff;
-      padding: 20px;
-      border: 3px solid #444;
-    }
-
-    .record {
-      padding: 5px;
-      border-bottom: 1px solid #ddd;
-      text-align: left;
-      font-size: 14px;
-    }
-
-    .controls {
-      margin: 20px auto;
-    }
-  </style>
-</head>
-<body>
-  <h1>시스템 모니터링 대시보드</h1>
-
-  <div class="controls">
-    업데이트 주기:
-    <select id="intervalSelector">
-      <option value="5000">5초</option>
-      <option value="10000" selected>10초</option>
-      <option value="30000">30초</option>
-      <option value="60000">60초</option>
-    </select>
-
-    &nbsp;&nbsp;&nbsp;CPU 경고 임계치:
-    <input type="number" id="cpuThreshold" value="90" min="10" max="100" style="width: 60px;" /> %
-  </div>
-
-  <div class="container">
-    <div class="box">
-      <h2>CPU</h2>
-      <p id="cpu-usage">00%</p>
-    </div>
-    <div class="box">
-      <h2>RAM</h2>
-      <p id="ram-usage">00%</p>
-    </div>
-    <div class="box">
-      <h2>디스크</h2>
-      <p id="disk-usage">00%</p>
-    </div>
-  </div>
-
-  <h2>가장 최신 데이터</h2>
-  <div class="chart-container">
-    <canvas id="barChart"></canvas>
-  </div>
-
-  <h2>개별 데이터</h2>
-  <div class="line-charts">
-    <div class="line-box"><h3>CPU</h3><canvas id="cpuLine"></canvas></div>
-    <div class="line-box"><h3>RAM</h3><canvas id="ramLine"></canvas></div>
-    <div class="line-box"><h3>디스크</h3><canvas id="diskLine"></canvas></div>
-  </div>
-
-  <div id="recordList"><h3>기록</h3></div>
-
-  <script>
-    const barCtx = document.getElementById('barChart').getContext('2d');
-    const cpuLineCtx = document.getElementById('cpuLine').getContext('2d');
-    const ramLineCtx = document.getElementById('ramLine').getContext('2d');
-    const diskLineCtx = document.getElementById('diskLine').getContext('2d');
-
-    const createLineChart = (ctx, label, color) => new Chart(ctx, {
-      type: 'line',
+  const createSystemChart = (type) => {
+    chartType = type;
+    return new Chart(ctx, {
+      type: type,
       data: {
         labels: [],
-        datasets: [{
-          label,
-          data: [],
-          borderColor: color,
-          backgroundColor: 'transparent',
-          fill: false,
-          tension: 0,
-          pointRadius: 4,
-          pointHoverRadius: 6
-        }]
+        datasets: [
+          {
+            label: 'CPU (%)',
+            data: [],
+            borderColor: '#444',
+            backgroundColor: type === 'bar' ? 'rgba(68, 68, 68, 0.5)' : 'transparent',
+            barPercentage: 0.5,
+            fill: false
+          },
+          {
+            label: 'RAM (%)',
+            data: [],
+            borderColor: '#aaa',
+            backgroundColor: type === 'bar' ? 'rgba(170, 170, 170, 0.5)' : 'transparent',
+            barPercentage: 0.5,
+            fill: false
+          },
+          {
+            label: 'Disk (%)',
+            data: [],
+            borderColor: '#87CEFA',
+            backgroundColor: type === 'bar' ? 'rgba(135, 206, 250, 0.5)' : 'transparent',
+            barPercentage: 0.5,
+            fill: false
+          }
+        ]
       },
       options: {
         responsive: true,
         animation: false,
         scales: {
-          x: { display: false },
-          y: { display: false, min: 0, max: 100 }
-        },
-        plugins: {
-          legend: { display: false },
-          datalabels: {
-            align: 'top', anchor: 'end', offset: 8, color: '#000',
-            font: { size: 10 }, formatter: v => `${v}%`
+          y: {
+            beginAtZero: true,
+            max: 100,
+            ticks: {
+              stepSize: 10
+            }
           }
         }
-      },
-      plugins: [ChartDataLabels]
-    });
-
-    const barChart = new Chart(barCtx, {
-      type: 'bar',
-      data: {
-        labels: ['CPU', 'RAM', 'Disk'],
-        datasets: [{
-          label: '사용률 (%)',
-          data: [0, 0, 0],
-          backgroundColor: ['#444', '#aaa', '#87CEFA']
-        }]
-      },
-      options: {
-        responsive: true,
-        scales: {
-          y: { beginAtZero: true, max: 100, ticks: { stepSize: 10 } },
-          x: { ticks: { font: { size: 12 } } }
-        },
-        plugins: { legend: { display: false } }
       }
     });
+  };
 
-    const cpuChart = createLineChart(cpuLineCtx, 'CPU (%)', '#444');
-    const ramChart = createLineChart(ramLineCtx, 'RAM (%)', '#aaa');
-    const diskChart = createLineChart(diskLineCtx, 'Disk (%)', '#87CEFA');
+  let systemChart = createSystemChart(chartType);
 
-    let intervalHandle;
-    let updateInterval = parseInt(document.getElementById("intervalSelector").value);
-
-    function playAlertSound(cpu, threshold) {
-      const audio = new Audio("https://actions.google.com/sounds/v1/alarms/alarm_clock.ogg");
-      audio.volume = 0.8;
-      audio.play().catch(err => console.warn("사운드 재생 실패:", err));
-      alert(`⚠️ CPU 사용률 ${cpu}% (임계치 ${threshold}%) 초과!`);
+  const pieChart = new Chart(pieCtx, {
+    type: 'pie',
+    data: {
+      labels: ['CPU', 'RAM', 'Disk'],
+      datasets: [{
+        data: [0, 0, 0],
+        backgroundColor: ['#444', '#aaa', '#87CEFA']
+      }]
+    },
+    options: {
+      responsive: true
     }
+  });
 
-    async function updateChart() {
-      try {
-        const cpu = Math.floor(Math.random() * 100);
-        const ram = Math.floor(Math.random() * 100);
-        const disk = Math.floor(Math.random() * 100);
-        const time = new Date().toLocaleTimeString();
-        const threshold = parseInt(document.getElementById("cpuThreshold").value);
+  async function updateChart() {
+    try {
+      const response = await fetch('/metrics');
+      const data = await response.json();
+      const cpu = data.cpu;
+      const ram = data.ram.percent;
+      const disk = data.disk.percent;
+      const time = new Date().toLocaleTimeString();
 
-        const cpuElem = document.getElementById('cpu-usage');
-        const ramElem = document.getElementById('ram-usage');
-        const diskElem = document.getElementById('disk-usage');
+      document.getElementById('cpu-usage').textContent = `${cpu}%`;
+      document.getElementById('ram-usage').textContent = `${ram}%`;
+      document.getElementById('disk-usage').textContent = `${disk}%`;
 
-        cpuElem.textContent = `${cpu}%`;
-        ramElem.textContent = `${ram}%`;
-        diskElem.textContent = `${disk}%`;
-
-        cpuElem.style.color = cpu >= threshold ? 'red' : '#000';
-        if (cpu >= threshold) playAlertSound(cpu, threshold);
-
-        barChart.data.datasets[0].data = [cpu, ram, disk];
-        barChart.update();
-
-        const updateLine = (chart, value) => {
-          if (chart.data.labels.length >= 5) {
-            chart.data.labels.shift();
-            chart.data.datasets[0].data.shift();
-          }
-          chart.data.labels.push(time);
-          chart.data.datasets[0].data.push(value);
-          chart.update();
-        };
-
-        updateLine(cpuChart, cpu);
-        updateLine(ramChart, ram);
-        updateLine(diskChart, disk);
-
-        const recordList = document.getElementById('recordList');
-        const recordItem = document.createElement('div');
-        recordItem.classList.add('record');
-        recordItem.textContent = `${time} - CPU: ${cpu}%, RAM: ${ram}%, Disk: ${disk}%`;
-        const records = recordList.querySelectorAll('.record');
-        if (records.length >= 5) recordList.removeChild(records[0]);
-        recordList.appendChild(recordItem);
-      } catch (err) {
-        console.error('데이터 업데이트 실패:', err);
+      const threshold = parseInt(document.getElementById("cpuThreshold").value);
+      if (cpu > threshold) {
+        alertAudio.play().catch(err => console.warn("사운드 재생 실패:", err));
+        setTimeout(() => {
+          alert(`⚠️ CPU 사용률 ${cpu}% (임계치 ${threshold}%) 초과!`);
+          alertAudio.pause();
+          alertAudio.currentTime = 0;
+        }, 10);
       }
+
+      const maxDataCount = chartType === 'bar' ? 3 : 7;
+      if (systemChart.data.labels.length >= maxDataCount) {
+        systemChart.data.labels.shift();
+        systemChart.data.datasets.forEach(ds => ds.data.shift());
+      }
+
+      systemChart.data.labels.push(time);
+      systemChart.data.datasets[0].data.push(cpu);
+      systemChart.data.datasets[1].data.push(ram);
+      systemChart.data.datasets[2].data.push(disk);
+      systemChart.update();
+
+      pieChart.data.datasets[0].data = [cpu, ram, disk];
+      pieChart.update();
+
+      const recordList = document.getElementById('recordList');
+      const recordItem = document.createElement('div');
+      recordItem.classList.add('record');
+      recordItem.textContent = `${time} - CPU: ${cpu}%, RAM: ${ram}%, Disk: ${disk}%`;
+
+      const records = recordList.querySelectorAll('.record');
+      if (records.length >= 5) {
+        recordList.removeChild(records[0]);
+      }
+      recordList.appendChild(recordItem);
+    } catch (err) {
+      console.error('데이터 업데이트 실패:', err);
     }
+  }
 
-    function startInterval() {
-      if (intervalHandle) clearInterval(intervalHandle);
-      intervalHandle = setInterval(updateChart, updateInterval);
-    }
+  function startInterval() {
+    if (intervalHandle) clearInterval(intervalHandle);
+    intervalHandle = setInterval(updateChart, updateInterval);
+  }
 
-    document.getElementById("intervalSelector").addEventListener("change", e => {
-      updateInterval = parseInt(e.target.value);
-      startInterval();
-    });
+  document.getElementById('viewSelector').addEventListener('change', (e) => {
+    const newType = e.target.value;
+    chartType = newType;
+    const chartTitle = document.getElementById('chartTitle');
+    chartTitle.textContent = newType === 'line' ? '실시간 라인 그래프' : '실시간 막대 그래프';
 
-    updateChart();
+    const labels = [...systemChart.data.labels];
+    const dataset0 = [...systemChart.data.datasets[0].data];
+    const dataset1 = [...systemChart.data.datasets[1].data];
+    const dataset2 = [...systemChart.data.datasets[2].data];
+
+    systemChart.destroy();
+    systemChart = createSystemChart(newType);
+
+    const limit = newType === 'bar' ? 3 : 7;
+    systemChart.data.labels = labels.slice(-limit);
+    systemChart.data.datasets[0].data = dataset0.slice(-limit);
+    systemChart.data.datasets[1].data = dataset1.slice(-limit);
+    systemChart.data.datasets[2].data = dataset2.slice(-limit);
+
+    systemChart.update();
+  });
+
+  document.getElementById("intervalSelector").addEventListener("change", e => {
+    updateInterval = parseInt(e.target.value);
     startInterval();
-  </script>
-</body>
-</html>
+  });
+
+  updateChart();
+  startInterval();
+</script>
